# SysY_Rewind

./: .gitignore  CMakeLists.txt  Makefile  README.md  hello.c  logic_short_circuit_fix_summary.md  riscv_backend_structure.md
docs/: README.md
docs/architecture/: README.md  current_pipeline.md  module_flow.md  riscv_backend_design.md  riscv_backend_support.md  ssa_mem2reg_design.md  support_matrix.md  target_architecture_and_tasks.md  task_progress.md  test_artifact_layout.md
docs/project/: README.md  backend_design.md  compilation_flow.md  frontend_design.md  ir_design.md  project_structure.md
docs/project/个人记录/: SSA.md  中间表示.md  前端.md  (+1 more)
include/back_end/: asm_writer.h  calling_convention.h  data_layout.h  frame_layout.h  instruction_selector.h  machine_asm_printer.h  machine_frame.h  machine_ir.h  machine_verifier.h  riscv.h
include/driver/: options.h  pipeline.h
include/front_end/: ast.h
include/ir/: cfg_analysis.h  dominance_analysis.h  func_context.h  ir_builder.h  ir_rewrite.h  ir_text_gen.h  ir_type.h  ir_verifier.h  mem2reg.h  pass_manager.h  rewind_ir.h  rewind_ir_builder.h  rewind_ir_type.h  semantic_checks.h  symbol_table.h
scripts/: run_cfg_analysis_smoke.sh  run_dominance_analysis_smoke.sh  run_ir_rewrite_smoke.sh  run_ir_verifier_smoke.sh  run_machine_ir_smoke.sh  run_mem2reg_smoke.sh  run_regression_smoke.sh  run_riscv_baremetal.sh  run_semantic_smoke.sh  run_ssa_smoke.sh
src/: CMakeLists.txt  ast.cpp  ast.h  koopa.h  koopa_ir.h  koopa_ir_builder.cpp  koopa_ir_builder.h  koopa_lib_bridge.cpp  koopa_lib_bridge.h  koopa_raw_builder.cpp  koopa_raw_builder.h  main.cpp  rewind_ir.h  rewind_ir_builder.cpp  rewind_ir_builder.h  risc.h  riscv.cpp  riscv.h  sysy.l  sysy.y
src/back_end/: asm_writer.cpp  calling_convention.cpp  data_layout.cpp  frame_layout.cpp  instruction_selector.cpp  machine_asm_printer.cpp  machine_ir.cpp  machine_verifier.cpp  riscv.cpp
src/driver/: options.cpp  pipeline.cpp
src/front_end/: ast.cpp  sysy.l  sysy.y
src/ir/: cfg_analysis.cpp  dominance_analysis.cpp  ir_builder.cpp  ir_builder_array_init.cpp  ir_builder_const_eval.cpp  ir_builder_expr.cpp  ir_builder_init.cpp  ir_builder_internal.h  ir_builder_runtime.cpp  ir_builder_stmt.cpp  ir_rewrite.cpp  ir_text_gen.cpp  ir_type.cpp  ir_verifier.cpp  koopa_ir_builder.cpp  mem2reg.cpp  pass_manager.cpp  rewind_ir_builder.cpp  rewind_ir_type.cpp  semantic_checks.cpp  symbol_table.cpp
tests/awesome-sysy/: README.md
tests/smoke/: hello.sysy
tmp/: BUILD_LOGIC.md  ir_smoke_test.cpp  koopa_ir_printer.cpp  koopa_ir_printer.h  raw_bridge_smoke_test.cpp
(+13 files in other folders)
